# Quark

./: .gitignore  CMakeLists.txt  Makefile  README.md  configuration.json  final_review_gate.py  pyproject.toml  repositories.json  tasks.py
.cursor/rules/: quark-prompt-rules.mdc
environments/configs/py310/tensorflow/: pyproject.toml
environments/configs/py310/torch/: pyproject.toml
environments/configs/py39/tensorflow/: pyproject.toml
environments/configs/py39/torch/: pyproject.toml
experiments/catzilla/: gemm.yml
experiments/inference/: 1.yml  2.yml  3.yml
experiments/training/: 1.yml
plugins/: CMakeLists.txt  __init__.py  pyproject.toml
plugins/include/: arguments.h  options.h  plugins.h  serialisation.h
plugins/quark_plugins/: __init__.py
plugins/src/: arguments.cpp  cli.cpp  options.cpp  plugins.cpp
quark/: __init__.py  quark_main.py  tasks.py
quark-engine/: __init__.py  pyproject.toml  quark_engine.py
quark-engine/benchmark/: op_benchmark.py
quark-engine/common/: error.py  trace.py
quark-engine/data_utils/: data_provider_base.py
quark-engine/executor/: executor_builder.py
quark-engine/visualisation/: plot.py
quark/benchmark/: __init__.py  benchmark.py  benchmark_collector.py  coordinator.py  op_benchmark.py  timer.py
quark/common/: __init__.py  config.py  enum.py  string.py  trace.py
quark/coordinator/: __init__.py  coordinator.py
quark/data_utils/: __init__.py  data_provider_base.py  data_provider_builder.py  iree_data_provider.py  tf_data_provider.py  torch_data_provider.py
quark/environments/configs/py310/tensorflow/: pyproject.toml
quark/environments/configs/py310/torch/: pyproject.toml
quark/environments/configs/py39/: pyproject_pytorch_py39.toml
quark/executor/: __init__.py  executor_base.py  executor_builder.py  tf_executor.py  torch_executor.py
quark/utils/: __init__.py  validator.py
quark/visualisation/: plot.py
quark/workload/: __init__.py  iree_workload.py  tf_workload.py  torch_workload.py  workload_base.py  workload_builder.py
quark_utility/: __init__.py  sandbox.py
quarkrt/: pyproject.toml
quarkrt/benchmark/: __init__.py
quarkrt/data_utils/: data_provider_base.py
quarkrt/executor/: executor_base.py
quarkrt/runtime/: quark_engine_main.py
runtime/benchmark/: benchmark.py  timer.py
runtime/data_utils/: __init__.py  data_provider_builder.py  tf_data_provider.py  torch_data_provider.py
runtime/executor/: __init__.py  torch_executor.py
runtime/quarkrt/: __init__.py  quark_engine_main.py
runtime/quarkrt/benchmark/: __init__.py  runner.py  timer.py  timer_base.py  tvm_timer.py
runtime/quarkrt/common/: __init__.py  enum.py  platform.py  serialise.py
runtime/quarkrt/data_utils/: __init__.py  catzilla_data_provider.py  data_provider_base.py  data_provider_builder.py  iree_data_provider.py  tf_data_provider.py  torch_data_provider.py
runtime/quarkrt/executor/: __init__.py  catzilla_executor.py  executor_base.py  executor_builder.py  tf_executor.py  torch_executor.py
runtime/quarkrt/runner/: runner.py
runtime/quarkrt/timer/: iree_timer.py  tf_timer.py  timer.py  timer_base.py  torch_timer.py  tvm_timer.py
runtime/quarkrt/visualisation/: plot.py
runtime/quarkrt/workload/: __init__.py  catzilla_workload.py  iree_workload.py  tf_workload.py  torch_workload.py  workload_base.py  workload_builder.py
runtime/workload/: __init__.py  iree_workload.py  workload_builder.py
scripts/: check_quarkrt.py  check_torch.py  replace.py
tests/: run_pytest.sh
tests/smoke_tests/: check_dynamic_library_load_error.py  check_quarkrt.py  check_tf.py  check_torch.py
tests/unittests/Benchmark/: test_benchmark.py  test_runner_torch.py  test_timer.py  test_timer_torch.py
tests/unittests/Common/: test_config.py  test_enum.py
tests/unittests/Conversion/LinalgToTosa/: genericop.mlir
tests/unittests/Conversion/TosaToTensor/: concat.mlir
tests/unittests/DataUtils/: test_provider_torch.py  test_torch_provider.py
tests/unittests/Executor/: test_executor.py  test_executor_torch.py
tests/unittests/Optimisation/Autodiff/: clamp.mlir  gather.mlir  minmax.mlir  optimise.mlir  scatter.mlir  select.mlir
tests/unittests/Optimisation/Common/: from-dummy.mlir  initialize-empty.mlir  make-compatible.mlir  multi-out-to-single.mlir  set-globals.mlir  to-dummy.mlir
tests/unittests/Utility/: test_config.py  test_enum.py
tests/unittests/Workload/: test_workload.py  test_workload_tf.py  test_workload_torch.py
tools/: renaming_script.py
utility/: __init__.py  pyproject.toml
utility/quark_utility/: __init__.py  config.py  enum.py  error.py  platform.py  plugin_registry.py  sandbox.py  serialise.py  string.py  trace.py  validator.py
wip_experiments/: gemm.yml
