[tool.poetry]
name = "quark"
version = "0.1.0"
description = "Query-based All-in-one Research Kit (PyTorch)"
authors = ["Albert Shi <heng.shi@sjtu.edu.cn>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
protobuf = "3.20.3"
pyyaml = "^6.0.2"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"
mkdocs-markdownextradata-plugin = "^0.2.6"
numpy = "1.23.4"
pytest = "^8.3.5"
pydantic = "^2.11.3"

[[tool.poetry.packages]]
include = "quark"

[tool.poetry.scripts]
quark = "quark.quark_main:program.run"

